--- a/client/src/components/MeetupStagesTabs/MeetupTabContent/MeetupTabContent.module.scss
+++ b/client/src/components/MeetupStagesTabs/MeetupTabContent/MeetupTabContent.module.scss
@@ -1,4 +1,4 @@
-.topicsTab {
+.meetupsTab {
   display: flex;
   flex-direction: column;
   row-gap: 25px;
@@ -9,7 +9,7 @@
   justify-content: space-between;
 }
 
-.topics {
+.meetups {
   display: flex;
   flex-direction: column;
   row-gap: 20px;
