--- a/client/src/components/VotesCount/VotesCount.module.scss
+++ b/client/src/components/VotesCount/VotesCount.module.scss
@@ -8,15 +8,15 @@
 }
 
 .icon {
-  width: 20px;
-  height: 21px;
+  width: 18px;
+  height: 18px;
 }
 
 .text {
   @extend .font-family-primary;
   @extend .font-weight-regular;
   @extend .font-size-xs;
-  @extend .line-height-s;
+  @extend .line-height-l;
   @extend .letter-spacing-larger-02;
   @extend .font-color-gray-03;
 }
