--- a/client/src/components/NewsCard/NewsCard.module.scss
+++ b/client/src/components/NewsCard/NewsCard.module.scss
@@ -4,88 +4,77 @@
 @import '~style/mixins';
 
 .news {
-  position: relative;
-  height: 160px;
+  height: 170px;
+  display: flex;
+  column-gap: 10px;
+}
 
-  .image {
-    position: absolute;
-    z-index: 1;
-    overflow: hidden;
+.image {
+  max-width: 170px;
+  max-height: 170px;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 
-    width: 144px;
-    height: 144px;
-    border-radius: 5px;
+  border-radius: 6px;
+  box-shadow: 3px 5px 8px $gray-shadow-03-color;
 
-    box-shadow: 3px 5px 8px $gray-shadow-03-color;
-    @include smooth-transition(box-shadow);
-
-    &:hover {
-      box-shadow: 3px 5px 8px color.adjust($gray-shadow-03-color, $alpha: +0.1);
-      @include smooth-transition(box-shadow);
-    }
-
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      object-position: center center;
-    }
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center center;
   }
+}
 
-  .content {
-    position: absolute;
-    bottom: 0;
-    right: 0;
+.content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 25px 30px;
 
-    height: calc(100% - 8px);
-    width: calc(100% - 8px);
+  border-radius: 6px;
+  background-color: $white-color;
+  box-shadow: 0 4px 3px $gray-shadow-05-color;
+  @include smooth-transition(box-shadow);
 
-    padding: 16px;
-    padding-left: 160px;
-    border-radius: 5px;
-
-    display: flex;
-    flex-direction: column;
-    row-gap: 8px;
-
-    background-color: $white-color;
-    box-shadow: 0 4px 3px $gray-shadow-05-color;
-    @include smooth-transition(box-shadow);
-
-    &:hover {
-      box-shadow: 0 4px 3px color.adjust($gray-shadow-05-color, $alpha: +0.1);
-      @include smooth-transition(box-shadow);
-    }
-
-    .date {
-      @extend .font-family-primary;
-      @extend .font-weight-regular;
-      @extend .font-size-xs;
-      @extend .line-height-xs;
-      @extend .letter-spacing-larger-01;
-      @extend .font-color-gray-03;
-    }
-
-    .title,
-    .text {
-      @include multiline-ellipsis(2);
-    }
-
-    .title {
-      @extend .font-family-secondary;
-      @extend .font-weight-medium;
-      @extend .font-size-m;
-      line-height: 100%;
-      @extend .letter-spacing-smaller;
-      @extend .font-color-dark;
-    }
-
-    .text {
-      @extend .font-family-primary;
-      @extend .font-weight-regular;
-      @extend .font-size-xs;
-      @extend .line-height-xxl;
-      @extend .font-color-gray-02;
-    }
+  &:hover {
+    box-shadow: 0 4px 3px color.adjust($gray-shadow-05-color, $alpha: +0.2);
   }
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  row-gap: 8px;
+}
+
+.date {
+  @extend .font-family-primary;
+  @extend .font-weight-regular;
+  @extend .font-size-xs;
+  @extend .line-height-xs;
+  @extend .font-color-gray-03;
+}
+
+.title,
+.text {
+  @include multiline-ellipsis(2);
+}
+
+.title {
+  @extend .font-family-secondary;
+  @extend .font-weight-medium;
+  @extend .font-size-m;
+  @extend .line-height-0;
+  @extend .font-color-dark;
+}
+
+.text {
+  @extend .font-family-primary;
+  @extend .font-weight-regular;
+  @extend .font-size-xs;
+  @extend .line-height-l;
+  @extend .font-color-gray-02;
 }
