--- a/client/src/style/_colors.scss
+++ b/client/src/style/_colors.scss
@@ -64,3 +64,5 @@ $red-03-color: #ffebe5;
 $orange-01-color: #fb9700;
 $orange-02-color: #ffc121;
 $orange-03-color: #fff6dc;
+
+$blue-03-color: #798ae7;
