--- a/client/src/components/Notification/Notification.module.scss
+++ b/client/src/components/Notification/Notification.module.scss
@@ -2,7 +2,7 @@
 @import '~style/typography';
 @import '~style/mixins';
 
-.wrapper {
+.notification {
   position: fixed;
   bottom: 40px;
   right: 40px;
