--- a/client/src/pages/ViewMeetupPage/ViewMeetupPage.module.scss
+++ b/client/src/pages/ViewMeetupPage/ViewMeetupPage.module.scss
@@ -46,6 +46,11 @@
   flex-direction: column;
   row-gap: 8px;
 
+  a {
+    color: $blue-01-color;
+    text-decoration: underline;
+  }
+
   &Name {
     @extend .font-family-primary;
     @extend .font-weight-regular;
